--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/native": "^6.1.7",
@@ -19,8 +20,10 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.11.0"
   },
   "devDependencies": {
