--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
-    "react-native-svg": "^13.11.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^13.11.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
