--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@tanstack/react-query": "^5.0.0-rc.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "react": "18.2.0",
