--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
@@ -18,6 +19,7 @@
     "@tanstack/react-query": "^5.0.0-rc.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
