--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -2,28 +2,20 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "src/assets/fonts/GmarketSansTTFBold.ttf",
-      "sha1": "b52c2a5f5bf990aa0c28efc2815c7d6d9a9ea260"
+      "path": "src/assets/fonts/Pretendard-Bold.otf",
+      "sha1": "bd4ac82cc26cf93c89cfbfbbba8825c5198b5b99"
     },
     {
-      "path": "src/assets/fonts/GmarketSansTTFLight.ttf",
-      "sha1": "97c64d4184d42895529e70d4453cd1299a09c0b9"
+      "path": "src/assets/fonts/Pretendard-Light.otf",
+      "sha1": "207a94ca77a34bba0b6cec41286bde3cbeecb7f1"
     },
     {
-      "path": "src/assets/fonts/GmarketSansTTFMedium.ttf",
-      "sha1": "abf7d6ce1869bad059315fc748aa2d5d56d00892"
+      "path": "src/assets/fonts/Pretendard-Medium.otf",
+      "sha1": "eba1a37734a9c4fe3d84f540ce8d812d366b2b22"
     },
     {
-      "path": "src/assets/fonts/NanumSquareRoundB.ttf",
-      "sha1": "e92331df4c26e67374cb41c18d4bdf326db8e53d"
-    },
-    {
-      "path": "src/assets/fonts/NanumSquareRoundL.ttf",
-      "sha1": "d5015ab895abdfd00f8a23105552f153cd953afa"
-    },
-    {
-      "path": "src/assets/fonts/NanumSquareRoundR.ttf",
-      "sha1": "f0c70764bea3fab551e1dedaae059d4495afd8db"
+      "path": "src/assets/fonts/Pretendard-Regular.otf",
+      "sha1": "e205ef0a314d9da4e1a9382e0e65a25900a9ac7b"
     }
   ]
 }
