--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.0.0-rc.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "lottie-react-native": "^6.4.1",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
