ios 스플래시 화면 추가

--- a/ios/delli/Info.plist
+++ b/ios/delli/Info.plist
@@ -52,6 +52,9 @@
 				<true/>
 			</dict>
 		</dict>
+		
+		<key>NSAllowsArbitraryLoads</key> 
+    <true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
