--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.11.0",
     "react-native-wheely": "^0.6.0",
