--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-google-mobile-ads": "^12.10.0",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
