--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
