--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@tanstack/react-query": "^5.0.0-rc.2",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "eslint-plugin-react-perf": "^3.3.2",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "^6.4.1",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
-    "react-native-google-mobile-ads": "^12.10.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.4.2",
