--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-google-mobile-ads": "^13.0.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.4.2",
