로컬 데이터베이스 추가

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.11.0",
     "react-native-wheely": "^0.6.0",
@@ -54,6 +55,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
