--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-google-mobile-ads": "^13.0.2",
     "react-native-haptic-feedback": "^2.2.0",
