--- a/ios/Podfile
+++ b/ios/Podfile
@@ -60,6 +60,7 @@ target 'delli' do
   flags = get_default_flags()
 
   use_frameworks! :linkage => :static
+#   use_frameworks = true
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -75,10 +76,17 @@ target 'delli' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'SVGKit'
+
   target 'delliTests' do
     inherit! :complete
     # Pods for testing
   end
+
+  target 'DelliWidgetExtension' do
+    inherit! :search_paths
+  end
+
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
