--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext {
+        kotlinVersion = "1.9.0"
         buildToolsVersion = "33.0.0"
         minSdkVersion = 27
         compileSdkVersion = 33
