--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.72.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^13.3.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
@@ -48,7 +49,8 @@
     "react-native-view-shot": "^3.8.0",
     "react-native-wheely": "^0.6.0",
     "react-native-widgetkit": "^1.0.9",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -60,6 +62,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
