--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.4.2",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
