--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@gorhom/bottom-sheet": "^4.4.7",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@notifee/react-native": "^7.8.2",
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-firebase/analytics": "^19.0.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/crashlytics": "^19.0.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-seoul/kakao-login": "^5.3.0",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.0.0-rc.2",
     "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.4.0",
@@ -31,20 +31,20 @@
     "lottie-react-native": "^6.4.1",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native": "^0.74.0",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-google-mobile-ads": "^13.3.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
-    "react-native-reanimated": "^3.4.2",
+    "react-native-reanimated": "^3.6.0",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "^13.11.0",
+    "react-native-svg": "^15.4.0",
     "react-native-wheely": "^0.6.0",
     "reanimated-color-picker": "^3.0.4",
     "recoil": "^0.7.7"
@@ -54,7 +54,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.9",
+    "@react-native/metro-config": "^0.74.0",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-native-sqlite-storage": "^6.0.5",
