--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "18.2.0",
     "react-native": "^0.74.0",
     "react-native-gesture-handler": "^2.18.1",
-    "react-native-google-mobile-ads": "^13.3.1",
+    "react-native-google-mobile-ads": "^14.2.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.6.0",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
@@ -66,7 +67,7 @@
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
