--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/crashlytics": "^19.0.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-seoul/kakao-login": "^5.3.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.0.0-rc.2",
@@ -65,6 +66,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@welldone-software/why-did-you-render": "^8.0.3",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
