--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.2",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.6.0",
     "react-native-redash": "^18.1.3",
@@ -49,6 +50,7 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-view-shot": "^3.8.0",
     "react-native-wheely": "^0.6.0",
     "reanimated-color-picker": "^3.0.4",
