--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/analytics": "^19.0.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/crashlytics": "^19.0.0",
