--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.2",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.6.0",
