--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-seoul/kakao-login": "^5.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.21",
     "@tanstack/react-query": "^5.0.0-rc.2",
     "@types/lodash.debounce": "^4.0.9",
