--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "^0.74.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
