안드로이드 패키지명 변경

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,9 +75,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.delli"
+    namespace "com.delli.app"
     defaultConfig {
-        applicationId "com.delli"
+        applicationId "com.delli.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 5
