시스템 점검/강제 업데이트 추가

--- a/ios/delli/Info.plist
+++ b/ios/delli/Info.plist
@@ -53,6 +53,7 @@
 	<array>
 		<string>kakaolink</string>
 		<string>kakaokompassauth</string>
+        <string>items-apps</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
