--- a/ios/delli/Info.plist
+++ b/ios/delli/Info.plist
@@ -94,5 +94,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진을 등록하려면 사진 접근을 허용해 주세요.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>사진을 등록하려면 카메라 접근을 허용해 주세요.</string>
 </dict>
 </plist>
