--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.11",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@notifee/react-native": "^7.8.2",
@@ -44,9 +45,12 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.2",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-image-crop-tools": "^1.6.4",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-month-year-picker": "^1.9.0",
     "react-native-pager-view": "^6.4.1",
-    "react-native-permissions": "^4.1.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.6.0",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.10.5",
