--- a/ios/delli/Info.plist
+++ b/ios/delli/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>델리</string>
 	<key>CFBundleExecutable</key>
@@ -53,7 +53,7 @@
 	<array>
 		<string>kakaolink</string>
 		<string>kakaokompassauth</string>
-        <string>items-apps</string>
+		<string>items-apps</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
@@ -70,12 +70,16 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>사진을 등록하려면 카메라 접근을 허용해 주세요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진을 등록하려면 사진 접근을 허용해 주세요.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pretendard-Bold.otf</string>
-	  <string>Pretendard-Light.otf</string>
+		<string>Pretendard-Light.otf</string>
 		<string>Pretendard-Medium.otf</string>
 		<string>Pretendard-Regular.otf</string>
 		<string>Pretendard-SemiBold.otf</string>
@@ -94,9 +98,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>사진을 등록하려면 사진 접근을 허용해 주세요.</string>
-    <key>NSCameraUsageDescription</key>
-    <string>사진을 등록하려면 카메라 접근을 허용해 주세요.</string>
 </dict>
 </plist>
